--- a/templates/user_tasks.html
+++ b/templates/user_tasks.html
@@ -45,7 +45,7 @@
                 <a href="/update-task/{{task.id}}/">
                   <img
                     class="fill-current w-4 h-4"
-                    src="https://cdn-user-icons.flaticon.com/64103/64103881/1644389866335.svg?token=exp=1644390767~hmac=3e2459beb46b683eb97f86802950224d"
+                    src="https://cdn-icons-png.flaticon.com/512/1250/1250615.png"
                 /></a>
               </button>
               <button
@@ -54,7 +54,7 @@
                 <a href="/delete-task/{{task.id}}/">
                   <img
                     class="fill-current w-4 h-4"
-                    src="https://cdn-user-icons.flaticon.com/64103/64103881/1644389790621.svg?token=exp=1644390698~hmac=b3eab795860bd32d2563c4bdc2d17af1"
+                    src="https://cdn-icons-png.flaticon.com/512/3439/3439691.png"
                 /></a>
               </button>
             </div>
@@ -80,7 +80,7 @@
                 <a href="/update-task/{{task.id}}/">
                   <img
                     class="fill-current w-4 h-4"
-                    src="https://cdn-user-icons.flaticon.com/64103/64103881/1644389866335.svg?token=exp=1644390767~hmac=3e2459beb46b683eb97f86802950224d"
+                    src="https://cdn-icons-png.flaticon.com/512/1250/1250615.png"
                 /></a>
               </button>
               <button
@@ -89,7 +89,7 @@
                 <a href="/delete-task/{{task.id}}/">
                   <img
                     class="fill-current w-4 h-4"
-                    src="https://cdn-user-icons.flaticon.com/64103/64103881/1644389790621.svg?token=exp=1644390698~hmac=b3eab795860bd32d2563c4bdc2d17af1"
+                    src="https://cdn-icons-png.flaticon.com/512/3439/3439691.png"
                 /></a>
               </button>
             </div>
